# netbox_storage_plugin

./: MANIFEST.in  pyproject.toml  setup.py
netbox_storage_plugin/: __init__.py  details_fields.py  filtersets.py  forms.py  models.py  navigation.py  search.py  tables.py  urls.py  views.py
netbox_storage_plugin/api/: serializers.py  urls.py  views.py
netbox_storage_plugin/migrations/: 0001_initial.py  0002_disk_diskset_filesystem_logicaldrive_objectstorage_and_more.py  0003_alter_disk_options_alter_diskset_options_and_more.py  0004_remove_disk_content_type_remove_disk_object_id_and_more.py  0005_alter_disk_options_and_more.py
netbox_storage_plugin/script/: zfs-sync.py
netbox_storage_plugin/templates/: volume_edit.html
netbox_storage_plugin/templates/netbox_storage_plugin/: device_disks_tab.html  disk-detail.html  disk-detail.html.old  disk.html  diskset.html  filesystem.html  logicaldrive.html  objectstorage.html  sanvolume.html  share.html  storage_edit.html  storage_list.html  vmdisk.html  volume_edit.html
netbox_storage_plugin/templates/network_storage_plugin/: volume_detail.html
